--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "quote:solana": "ts-node lib/solana/swap/solana-quote.ts",
+    "swap-data:solana": "ts-node lib/solana/swap/solana-swap.ts",
     "chain:solana": "ts-node lib/solana/swap/solana-chain.ts",
     "tokens:solana": "ts-node lib/solana/swap/solana-tokens.ts",
     "liquidity:solana": "ts-node lib/solana/swap/solana-liquidity.ts",
@@ -12,6 +13,7 @@
     "token-pairs:solana": "ts-node lib/solana/cross-chain/solana-token-pairs.ts",
     "all:solana": "npm run quote:solana && npm run chain:solana && npm run tokens:solana && npm run liquidity:solana && npm run bridge-tokens:solana && npm run bridges:solana && npm run cross-chain-quote:solana && npm run token-pairs:solana",
     "quote:evm": "ts-node lib/evm/swap/evm-quote.ts",
+    "swap-data:evm": "ts-node lib/evm/swap/evm-swap.ts",
     "chain:evm": "ts-node lib/evm/swap/evm-chain.ts",
     "tokens:evm": "ts-node lib/evm/swap/evm-tokens.ts",
     "liquidity:evm": "ts-node lib/evm/swap/evm-liquidity.ts",
@@ -20,11 +22,13 @@
     "cross-chain-quote:evm": "ts-node lib/evm/cross-chain/evm-cross-chain-quote.ts",
     "all:evm": "npm run quote:evm && npm run chain:evm && npm run tokens:evm && npm run liquidity:evm && npm run bridge-tokens:evm && npm run bridges:evm && npm run cross-chain-quote:evm",
     "quote:ton": "ts-node lib/ton/swap/ton-quote.ts",
+    "swap-data:ton": "ts-node lib/ton/swap/ton-swap.ts",
     "chain:ton": "ts-node lib/ton/swap/ton-chain.ts",
     "tokens:ton": "ts-node lib/ton/swap/ton-tokens.ts",
     "liquidity:ton": "ts-node lib/ton/swap/ton-liquidity.ts",
     "all:ton": "npm run quote:ton && npm run chain:ton && npm run tokens:ton && npm run liquidity:ton",
     "quote:tron": "ts-node lib/tron/swap/tron-quote.ts",
+    "swap-data:tron": "ts-node lib/tron/swap/tron-swap.ts",
     "chain:tron": "ts-node lib/tron/swap/tron-chain.ts",
     "tokens:tron": "ts-node lib/tron/swap/tron-tokens.ts",
     "liquidity:tron": "ts-node lib/tron/swap/tron-liquidity.ts",
