Squashed commit of the following:
commit 32bd2b8d88138a285667c04235145e9ee16059d7
Author: Julian Martinez <julian_martinez28@outlook.com>
Date:   Mon Jan 6 12:18:09 2025 -0800

    Squashed commit of the following:

    commit 1e73d5d8663b65d2db428ae0230571d1472813c3
    Author: Julian Martinez <julian_martinez28@outlook.com>
    Date:   Mon Jan 6 12:17:53 2025 -0800

        add auto-slippage scripts

    commit 0d792d3f8e412b62f96094e92393ea9cfd875761
    Author: Julian Martinez <julian_martinez28@outlook.com>
    Date:   Sun Jan 5 19:51:50 2025 -0800

        Update solana-quote.ts

    commit 41045f0404f7ce6b985e493682b27c6d48632bbd
    Author: Julian Martinez <julian_martinez28@outlook.com>
    Date:   Wed Dec 18 22:06:19 2024 -0800

        add-auto-slippage

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "quote:solana": "ts-node lib/solana/swap/solana-quote.ts",
+    "swap-data:solana": "ts-node lib/solana/swap/solana-swap.ts",
     "chain:solana": "ts-node lib/solana/swap/solana-chain.ts",
     "tokens:solana": "ts-node lib/solana/swap/solana-tokens.ts",
     "liquidity:solana": "ts-node lib/solana/swap/solana-liquidity.ts",
@@ -12,6 +13,7 @@
     "token-pairs:solana": "ts-node lib/solana/cross-chain/solana-token-pairs.ts",
     "all:solana": "npm run quote:solana && npm run chain:solana && npm run tokens:solana && npm run liquidity:solana && npm run bridge-tokens:solana && npm run bridges:solana && npm run cross-chain-quote:solana && npm run token-pairs:solana",
     "quote:evm": "ts-node lib/evm/swap/evm-quote.ts",
+    "swap-data:evm": "ts-node lib/evm/swap/evm-swap.ts",
     "chain:evm": "ts-node lib/evm/swap/evm-chain.ts",
     "tokens:evm": "ts-node lib/evm/swap/evm-tokens.ts",
     "liquidity:evm": "ts-node lib/evm/swap/evm-liquidity.ts",
@@ -28,11 +30,13 @@
     "cross-chain-quote:sui": "ts-node lib/sui/cross-chain/sui-cross-chain-quote.ts",
     "all:sui": "npm run quote:sui && npm run chain:sui && npm run tokens:sui && npm run liquidity:sui && npm run bridge-tokens:sui && npm run bridges:sui && npm run cross-chain-quote:sui",
     "quote:ton": "ts-node lib/ton/swap/ton-quote.ts",
+    "swap-data:ton": "ts-node lib/ton/swap/ton-swap.ts",
     "chain:ton": "ts-node lib/ton/swap/ton-chain.ts",
     "tokens:ton": "ts-node lib/ton/swap/ton-tokens.ts",
     "liquidity:ton": "ts-node lib/ton/swap/ton-liquidity.ts",
     "all:ton": "npm run quote:ton && npm run chain:ton && npm run tokens:ton && npm run liquidity:ton",
     "quote:tron": "ts-node lib/tron/swap/tron-quote.ts",
+    "swap-data:tron": "ts-node lib/tron/swap/tron-swap.ts",
     "chain:tron": "ts-node lib/tron/swap/tron-chain.ts",
     "tokens:tron": "ts-node lib/tron/swap/tron-tokens.ts",
     "liquidity:tron": "ts-node lib/tron/swap/tron-liquidity.ts",
