swap -> swap-data; add single chain solana swap

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "quote:solana": "ts-node lib/solana/swap/solana-quote.ts",
-    "swap-data:solana": "ts-node lib/solana/swap/solana-swap.ts",
+    "swap-data:solana": "ts-node lib/solana/swap/solana-swap-data.ts",
     "chain:solana": "ts-node lib/solana/swap/solana-chain.ts",
     "tokens:solana": "ts-node lib/solana/swap/solana-tokens.ts",
     "liquidity:solana": "ts-node lib/solana/swap/solana-liquidity.ts",
@@ -13,7 +13,7 @@
     "token-pairs:solana": "ts-node lib/solana/cross-chain/solana-token-pairs.ts",
     "all:solana": "npm run quote:solana && npm run chain:solana && npm run tokens:solana && npm run liquidity:solana && npm run bridge-tokens:solana && npm run bridges:solana && npm run cross-chain-quote:solana && npm run token-pairs:solana",
     "quote:evm": "ts-node lib/evm/swap/evm-quote.ts",
-    "swap-data:evm": "ts-node lib/evm/swap/evm-swap.ts",
+    "swap-data:evm": "ts-node lib/evm/swap/evm-swap-data.ts",
     "chain:evm": "ts-node lib/evm/swap/evm-chain.ts",
     "tokens:evm": "ts-node lib/evm/swap/evm-tokens.ts",
     "liquidity:evm": "ts-node lib/evm/swap/evm-liquidity.ts",
@@ -22,7 +22,7 @@
     "cross-chain-quote:evm": "ts-node lib/evm/cross-chain/evm-cross-chain-quote.ts",
     "all:evm": "npm run quote:evm && npm run chain:evm && npm run tokens:evm && npm run liquidity:evm && npm run bridge-tokens:evm && npm run bridges:evm && npm run cross-chain-quote:evm",
     "quote:sui": "ts-node lib/sui/swap/sui-quote.ts",
-    "swap-data:sui": "ts-node lib/sui/swap/sui-swap.ts",
+    "swap-data:sui": "ts-node lib/sui/swap/sui-swap-data.ts",
     "chain:sui": "ts-node lib/sui/swap/sui-chain.ts",
     "tokens:sui": "ts-node lib/sui/swap/sui-tokens.ts",
     "liquidity:sui": "ts-node lib/sui/swap/sui-liquidity.ts",
@@ -31,13 +31,13 @@
     "cross-chain-quote:sui": "ts-node lib/sui/cross-chain/sui-cross-chain-quote.ts",
     "all:sui": "npm run quote:sui && npm run chain:sui && npm run tokens:sui && npm run liquidity:sui && npm run bridge-tokens:sui && npm run bridges:sui && npm run cross-chain-quote:sui",
     "quote:ton": "ts-node lib/ton/swap/ton-quote.ts",
-    "swap-data:ton": "ts-node lib/ton/swap/ton-swap.ts",
+    "swap-data:ton": "ts-node lib/ton/swap/ton-swap-data.ts",
     "chain:ton": "ts-node lib/ton/swap/ton-chain.ts",
     "tokens:ton": "ts-node lib/ton/swap/ton-tokens.ts",
     "liquidity:ton": "ts-node lib/ton/swap/ton-liquidity.ts",
     "all:ton": "npm run quote:ton && npm run chain:ton && npm run tokens:ton && npm run liquidity:ton",
     "quote:tron": "ts-node lib/tron/swap/tron-quote.ts",
-    "swap-data:tron": "ts-node lib/tron/swap/tron-swap.ts",
+    "swap-data:tron": "ts-node lib/tron/swap/tron-swap-data.ts",
     "chain:tron": "ts-node lib/tron/swap/tron-chain.ts",
     "tokens:tron": "ts-node lib/tron/swap/tron-tokens.ts",
     "liquidity:tron": "ts-node lib/tron/swap/tron-liquidity.ts",
@@ -49,6 +49,7 @@
     "@mysten/sui": "^1.17.0",
     "@solana/web3.js": "^1.95.8",
     "@types/chalk": "^0.4.31",
+    "bn.js": "^5.2.1",
     "bs58": "^6.0.0",
     "chalk": "^4.1.2",
     "commander": "^12.1.0",
@@ -58,6 +59,7 @@
     "ora": "^5.4.1"
   },
   "devDependencies": {
+    "@types/bn.js": "^5.1.6",
     "@types/crypto-js": "^4.2.1",
     "@types/node": "^20.10.5",
     "@types/node-fetch": "^2.6.9",
