--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ OKX_PROJECT_ID=
 OKX_API_KEY=
 OKX_SECRET_KEY=
 OKX_API_PASSPHRASE=
+WALLET_ADDRESS=
+RECEIVING_ADDRESS=
+PRIVATE_KEY=
+SOLANA_RPC_URL=
+WS_ENDPONT=
